GTNPORTAL-2252: fix css issue where the height when editing personal information is too short and cuts off parts of the information in some browsers.  Fix css issue where the table field is too short in some browsers and causes the icon to be placed on a new line when adding new users to a group.

--- a/portlet/exoadmin/src/main/webapp/skin/organization/webui/component/UIOrganizationPortlet/DefaultStylesheet.css
+++ b/portlet/exoadmin/src/main/webapp/skin/organization/webui/component/UIOrganizationPortlet/DefaultStylesheet.css
@@ -124,11 +124,11 @@
 }
 
 .UIOrganizationPortlet .UIPersonalInfo .UIItemSelector .ItemDetailList {
-	height: 320px;
+	height: 345px;
 }
 
 .UIOrganizationPortlet .UIPersonalInfo .UIItemSelector .ItemList {
-	height: 300px;
+	height: 324px;
 }
 
 .UIOrganizationPortlet .UIPersonalInfo .UIFormInputSet {
@@ -310,7 +310,7 @@
 }
 
 .UIOrganizationPortlet .UIGroupManagement .UIGroupMembershipForm td.FieldComponent {
-	width: 278px;
+        width: auto;
 }
 
 /*#######################	UIMemberShipManagement #################################*/
